--- a/giF0S_Project/Styles/Styles.css
+++ b/giF0S_Project/Styles/Styles.css
@@ -252,44 +252,14 @@ body {
           box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
 }
 
-#buttonZone #themes {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-item-align: center;
-      align-self: center;
-  width: 2.5%;
-  height: 36px;
-  background-color: #F7C9F3;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  background-image: url(../Images/dropdown.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  border: #110038 outset 1px;
-  -webkit-box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
-          box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
-}
-
-#buttonZone #themes:active {
-  outline: 1px dotted #110038;
-  outline-offset: -4px;
-}
-
-#buttonZone #themes:hover {
-  outline: 1px dotted #110038;
-  outline-offset: -4px;
-}
-
-#buttonZone a {
+a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-left: 1.1474%;
 }
 
-#buttonZone #linkMyGifos {
+#linkMyGifos {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -300,12 +270,12 @@ body {
   font-family: "Chakra Petch";
 }
 
-#buttonZone #linkMyGifos:hover {
+#linkMyGifos:hover {
   outline: 1px dotted #110038;
   outline-offset: -4px;
 }
 
-#buttonZone #linkMyGifos:active {
+#linkMyGifos:active {
   color: #B4B4B4;
 }
 
@@ -545,33 +515,38 @@ body {
   border: solid 1px #E6BBE2;
   -webkit-box-shadow: inset -2px -2px 0 0 #ECDCE4, inset 2px 2px 0 0 #80687D;
           box-shadow: inset -2px -2px 0 0 #ECDCE4, inset 2px 2px 0 0 #80687D;
+  caret-color: #4180F6;
+  color: #110038;
+  font-size: 16px;
+  font-family: "Chakra Petch";
+  font-weight: 400;
 }
 
 #suggestions #suggest::-webkit-input-placeholder {
   color: #110038;
-  font-family: "Chakra Petch";
   font-size: 14px;
+  font-family: "Chakra Petch";
   font-weight: 400;
 }
 
 #suggestions #suggest:-ms-input-placeholder {
   color: #110038;
-  font-family: "Chakra Petch";
   font-size: 14px;
+  font-family: "Chakra Petch";
   font-weight: 400;
 }
 
 #suggestions #suggest::-ms-input-placeholder {
   color: #110038;
-  font-family: "Chakra Petch";
   font-size: 14px;
+  font-family: "Chakra Petch";
   font-weight: 400;
 }
 
 #suggestions #suggest::placeholder {
   color: #110038;
-  font-family: "Chakra Petch";
   font-size: 14px;
+  font-family: "Chakra Petch";
   font-weight: 400;
 }
 
@@ -680,33 +655,38 @@ body {
   border: solid 1px #E6BBE2;
   -webkit-box-shadow: inset -2px -2px 0 0 #ECDCE4, inset 2px 2px 0 0 #80687D;
           box-shadow: inset -2px -2px 0 0 #ECDCE4, inset 2px 2px 0 0 #80687D;
+  caret-color: #4180F6;
+  color: #110038;
+  font-size: 16px;
+  font-family: "Chakra Petch";
+  font-weight: 400;
 }
 
 #trendsSection #trends::-webkit-input-placeholder {
   color: #110038;
-  font-family: "Chakra Petch";
   font-size: 14px;
+  font-family: "Chakra Petch";
   font-weight: 400;
 }
 
 #trendsSection #trends:-ms-input-placeholder {
   color: #110038;
-  font-family: "Chakra Petch";
   font-size: 14px;
+  font-family: "Chakra Petch";
   font-weight: 400;
 }
 
 #trendsSection #trends::-ms-input-placeholder {
   color: #110038;
-  font-family: "Chakra Petch";
   font-size: 14px;
+  font-family: "Chakra Petch";
   font-weight: 400;
 }
 
 #trendsSection #trends::placeholder {
   color: #110038;
-  font-family: "Chakra Petch";
   font-size: 14px;
+  font-family: "Chakra Petch";
   font-weight: 400;
 }
 
